- added G+ button - fixed Facebook button position alignment - added article image for presentation purposes

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -51,7 +51,7 @@ a {
     max-width: 100%;
     margin-top: 0;
     position: relative;
-    max-height:460px;
+    max-height:320px;
     overflow:hidden;
     background:#eee;
     
